add proposal table
