# backend/docs/swagger.yaml
@@ -5,6 +5,17 @@ definitions:
       message:
         type: string
     type: object
+  inputs.Airport:
+    properties:
+      address:
+        type: string
+      latitude:
+        type: number
+      longitude:
+        type: number
+      name:
+        type: string
+    type: object
   inputs.CreatePilot:
     type: object
   inputs.CreateUser:
@@ -25,6 +36,12 @@ definitions:
     type: object
   inputs.CreateVehicle:
     properties:
+      cruise_altitude:
+        type: number
+      cruise_speed:
+        type: number
+      is_verified:
+        type: boolean
       matriculation:
         type: string
       model_name:
@@ -34,10 +51,22 @@ definitions:
       type:
         type: string
     required:
+    - cruise_altitude
+    - cruise_speed
     - matriculation
     - model_name
     - seat
     - type
+    type: object
+  inputs.InputCreateFlight:
+    properties:
+      arrival:
+        $ref: '#/definitions/inputs.Airport'
+      departure:
+        $ref: '#/definitions/inputs.Airport'
+    required:
+    - arrival
+    - departure
     type: object
   inputs.LoginUser:
     properties:
@@ -68,6 +97,14 @@ definitions:
     type: object
   inputs.UpdateVehicle:
     properties:
+      cruise_altitude:
+        type: number
+      cruise_speed:
+        type: number
+      is_selected:
+        type: boolean
+      is_verified:
+        type: boolean
       matriculation:
         type: string
       model_name:
@@ -103,6 +140,49 @@ definitions:
       token:
         type: string
     type: object
+  responses.ResponseAirport:
+    properties:
+      address:
+        type: string
+      latitude:
+        type: number
+      longitude:
+        type: number
+      name:
+        type: string
+    type: object
+  responses.ResponseFlight:
+    properties:
+      arrival:
+        $ref: '#/definitions/responses.ResponseAirport'
+      created_at:
+        type: string
+      departure:
+        $ref: '#/definitions/responses.ResponseAirport'
+      id:
+        type: integer
+      pilot:
+        $ref: '#/definitions/responses.ListUser'
+      pilot_id:
+        type: integer
+      price:
+        type: number
+      status:
+        type: string
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+      vehicle:
+        $ref: '#/definitions/responses.Vehicle'
+      vehicle_id:
+        type: integer
+    required:
+    - arrival
+    - departure
+    - id
+    - status
+    type: object
   responses.User:
     properties:
       created_at:
@@ -128,8 +208,14 @@ definitions:
     properties:
       created_at:
         type: string
+      cruise_altitude:
+        type: number
+      cruise_speed:
+        type: number
       id:
         type: integer
+      is_selected:
+        type: boolean
       is_verified:
         type: boolean
       matriculation:
@@ -149,6 +235,94 @@ info:
   title: Backend AirFleet
   version: "1.0"
 paths:
+  /flights:
+    get:
+      consumes:
+      - application/json
+      description: get all flights
+      parameters:
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      - description: Offset
+        in: query
+        name: offset
+        type: integer
+      - description: Filter
+        in: query
+        name: filter
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/responses.ResponseFlight'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - BearerAuth: []
+      summary: Get all flights
+      tags:
+      - flight
+    post:
+      consumes:
+      - application/json
+      description: create a new flight
+      parameters:
+      - description: Message body
+        in: body
+        name: flightInput
+        required: true
+        schema:
+          $ref: '#/definitions/inputs.InputCreateFlight'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/responses.ResponseFlight'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - BearerAuth: []
+      summary: Create flight
+      tags:
+      - flight
+  /flights/current:
+    get:
+      consumes:
+      - application/json
+      description: get current flight
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.ResponseFlight'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - BearerAuth: []
+      summary: Get current flight
+      tags:
+      - flight
   /users:
     get:
       consumes:
