# backend/handlers/flight.go
@@ -34,11 +34,40 @@ func NewFlightHandler(flightService services.FlightServiceInterface) *FlightHand
 	return &FlightHandler{flightService}
 }
 
+// GetAll godoc
+//
+// @Summary	Get all flights
+// @Schemes
+// @Description	get all flights
+// @Tags			flight
+// @Accept			json
+// @Produce		json
+//
+// @Param			limit	query	int		false	"Limit"
+// @Param			offset	query	int		false	"Offset"
+// @Param			filter	query	string	false	"Filter"
+//
+// @Success		200				{object}	[]responses.ResponseFlight
+// @Failure		400				{object}	Response
+//
+// @Router			/flights [get]
+//
+// @Security	BearerAuth
 func (h *FlightHandler) GetAll(c *gin.Context) {
-	response := &Response{
-		Message: "flight endpoint",
+	limit, _ := strconv.Atoi(c.DefaultQuery("limit", "10"))
+	offset, _ := strconv.Atoi(c.DefaultQuery("offset", "0"))
+	filter := c.Query("filter")
+
+	flights, err := h.flightService.GetAllFlights(limit, offset, filter)
+	if err != nil {
+		response := &Response{
+			Message: err.Error(),
+		}
+		c.JSON(http.StatusBadRequest, response)
+		return
 	}
-	c.JSON(http.StatusOK, response)
+
+	c.JSON(http.StatusOK, flights)
 }
 
 // CreateFlight godoc
